tests/specs/graph/fast_check/return_inference/multiple_value_return_err.txt
~~ {"workspaceFastCheck":true} ~~
# workspace_members
[
  {
    "base": "file:///",
    "nv": "@scope/a@1.0.0",
    "exports": {
      ".": "./mod.ts"
    }
  }
]

# mod.ts
export const a = () => {
  if (globalThis) return 1;
  return 2;
}

export const b = function() {
  if (globalThis) return 1;
  return 2;
}

export function c() {
  if (globalThis) return 1;
  return 2;
}

export class D {
  d() {
    if (globalThis) return 1;
    return 2;
  }
}

export const e = {
  e() {
    if (globalThis) return 1;
    return 2;
  }
};

// TODO: we don't support this at all
// export const f = class {
//   f() {
//     if (globalThis) return 1;
//     return 2;
//   }
// };

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "size": 501,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    }
  ],
  "redirects": {}
}

Fast check file:///mod.ts:
  error[unknown-var-type]: unknown type for variable in the public API
   --> /mod.ts:1:14
    |
  1 | export const a = () => {
    |              ^ this variable's type could not be inferred because its initializer
    |              - contains this arrow expression, which is missing an explicit return type annotation
    |
    = hint: add an explicit return type annotation to the arrow expression in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: an arrow expression has multiple return statements with values, so a return type can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

  error[unknown-var-type]: unknown type for variable in the public API
   --> /mod.ts:6:14
    |
  6 | export const b = function() {
    |              ^ this variable's type could not be inferred because its initializer
    |              - contains this function expression, which is missing an explicit return type annotation
    |
    = hint: add an explicit return type annotation to the function expression in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: a function expression has multiple return statements with values, so a return type can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

  error[unknown-return-type]: unknown return type for function in the public API
    --> /mod.ts:11:17
     |
  11 | export function c() {
     |                 - this function is missing an explicit return type annotation
     |
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an known return type
    info: a function declaration has multiple return statements with values, so a return type can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-return-type

  error[unknown-return-type]: unknown return type for function in the public API
    --> /mod.ts:17:3
     |
  17 |   d() {
     |   - this function is missing an explicit return type annotation
     |
     = hint: add an explicit return type to the function

    info: all functions in the public API must have an known return type
    info: a function declaration has multiple return statements with values, so a return type can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-return-type

  error[unknown-var-type]: unknown type for variable in the public API
    --> /mod.ts:23:14
     |
  23 | export const e = {
     |              ^ this variable's type could not be inferred because its initializer
     |
  24 |   e() {
     |   - contains this object method, which is missing an explicit return type annotation
     |
     = hint: add an explicit return type annotation to the object method in the variable declaration initializer

    info: all variables in the public API must have a known type
    info: an object method has multiple return statements with values, so a return type can not be inferred without a type checker
    docs: https://jsr.io/go/slow-type-unknown-var-type

